<resources>
  <string name="app_name">Application</string>
  <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="code_1254689">Code: 1254689</string>
    <string name="keepers_06">Keepers: 06</string>
    <string name="nrn_78789473">NRN: 78789473</string>
    <string name="animals_172">Animals: 172</string>
    <string name="address_string">142 st. lower kachura</string>
    <string name="_923331112233">+923331112233</string>
    <string name="active_status">Active</string>
    <string name="owner"><u>Owner</u></string>
    <string name="owner_real">Owner</string>
    <string name="keeper"><u>Keeper</u></string>
    <string name="keepers_real">Keepers</string>
    <string name="animal_registration"><u>Animal Registration</u></string>
    <string name="animal_registration_real">Animal Registration</string>
    <string name="herd"><u>Herd</u></string>
    <string name="herd_real">Herd</string>
</resources>