<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/collapsing_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

    >

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
        android:fitsSystemWindows="true"
        android:background="@color/white"


        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_collapseMode="parallax"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_margin="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/ll_card_first_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_75sdp"

                    android:src="@drawable/ic_image"
                    android:background="@color/black"

                    />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   android:layout_marginStart="@dimen/_10sdp"
                   >
                   <RelativeLayout
                       android:id="@+id/rl_first_row"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       >

                       <TextView
                           android:id="@+id/tv_name"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/lorem_ipsum"
                           android:textColor="@color/gray"
                           android:textSize="@dimen/_15ssp"

                           android:textStyle="bold"
                           app:layout_collapseMode="pin" />

                       <TextView
                           android:id="@+id/tv_status"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/active_status"
                           android:layout_alignParentEnd="true"
                           android:textSize="@dimen/_15ssp"
                           android:textStyle="bold"
                           android:textColor="@color/green"/>

                   </RelativeLayout>

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="@dimen/_5sdp"
                       >

                       <TextView
                           android:id="@+id/tv_code"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/code_1254689"

                           android:textColor="@color/gray"
                           android:textSize="@dimen/_11ssp" />

                       <TextView
                           android:id="@+id/tv_keepers"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentEnd="true"
                           android:text="@string/keepers_06"
                           android:textColor="@color/gray"

                           android:textSize="@dimen/_11ssp" />

                   </RelativeLayout>

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"

                       >

                       <TextView
                           android:id="@+id/tv_NRN"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/nrn_78789473"
                           android:textColor="@color/gray"
                           android:textSize="@dimen/_11ssp" />

                       <TextView
                           android:id="@+id/tv_animal_count"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentEnd="true"
                           android:text="@string/animals_172"

                           android:textColor="@color/gray"
                           android:textSize="@dimen/_11ssp" />

                   </RelativeLayout>




               </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                >


                <ImageView
                    android:id="@+id/iv_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18ssp"
                    android:src="@drawable/ic_pin" />

                <TextView

                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5ssp"

                    android:layout_toEndOf="@+id/iv_pin"
                    android:text="@string/address_string"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_11ssp" />


                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_18ssp"
                    android:layout_toStartOf="@id/tv_phone_number"
                    android:src="@drawable/ic_phone_name" />

                <TextView
                    android:id="@+id/tv_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_5ssp"

                    android:text="@string/_923331112233"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_11ssp" />
            </RelativeLayout>





        </LinearLayout>



        </androidx.cardview.widget.CardView>

       <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>


</com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"

            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            android:elevation="@dimen/_8sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                android:padding="@dimen/_10sdp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tv_owner_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="2.5"
                    android:text="@string/owner_real"
                    android:textColor="@color/unselected_gray"
                    android:textSize="@dimen/_13ssp" />

                <TextView

                    android:id="@+id/tv_keeper_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:textStyle="bold"
                    android:text="@string/keepers_real"
                    android:textColor="@color/unselected_gray"
                    android:textSize="@dimen/_13ssp" />

                <TextView

                    android:id="@+id/tv_animal_registration_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textStyle="bold"
                    android:text="@string/animal_registration_real"
                    android:textColor="@color/unselected_gray"
                    android:textSize="@dimen/_13ssp" />

                <TextView

                    android:id="@+id/tv_herd_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="2"
                    android:text="@string/herd_real"
                    android:textColor="@color/unselected_gray"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>




        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_card_container"
            android:layout_width="wrap_content"

            android:layout_height="match_parent" />

    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>

